--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,6 +7,7 @@
     {{#unless devoured}}
     <li>
         {{burger_name}}
+        <button class="devourButton" data-id="{{id}}">Devour this beast</button>
     </li>
     {{/unless}}
     {{/each}}
