--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-		<link rel="stylesheet" href="../../public/assets/css/burger_styleS.css" type="text/css" />
+
+		{{!-- Getting errors linking these  --}}
+
+		{{!-- <link rel="stylesheet" href="/assets/css/burger_styles.css" type="text/css" /> --}}
 		<title>Burger Time</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
-		<script src="../../public/assets/js/scripts.js"></script>
+		<script src="/assets/js/scripts.js" defer></script>
 	</head>
 	<body>
 		{{{ body }}}
