add script for click event to change devoured state. core application working succesfully

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 
-		{{!-- Getting errors linking these  --}}
+		
 
-		{{!-- <link rel="stylesheet" href="/assets/css/burger_styles.css" type="text/css" /> --}}
+		<link rel="stylesheet" href="/assets/css/burger_styles.css" type="text/css" />
 		<title>Burger Time</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
 		<script src="/assets/js/scripts.js" defer></script>
