--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 
-		
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+	<link rel="stylesheet" href="/assets/css/burger_styles.css" type="text/css" />
+	<title>Burger Time</title>
+	<script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
+	<script src="https://code.jquery.com/jquery.js"></script>
+	<script src="/assets/js/scripts.js" defer></script>
+</head>
 
-		<link rel="stylesheet" href="/assets/css/burger_styles.css" type="text/css" />
-		<title>Burger Time</title>
-		<script src="https://code.jquery.com/jquery.js"></script>
-		<script src="/assets/js/scripts.js" defer></script>
-	</head>
-	<body>
-		{{{ body }}}
-	</body>
+<body>
+	<section class ="section" id="mainSection">
+
+	{{{ body }}}
+
+	</section>
+</body>
+
 </html>
